--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,12 @@
 <% include partials/header %>
-
-<h1>Blogs Page</h1>
-<% blogs.forEach(function(blog){ %>
-  <div>
-    <h2><%= blog.title%></h2>
-    <img src="<%=blog.image%>">
-    <span> <%=blog.created%></span>
-    <p><%= blog.body %></p>
-  </div>
-<% }) %>
+<div class="ui container main">
+  <h1>Blogs Page</h1>
+  <% blogs.forEach(function(blog){ %>
+      <h2><%= blog.title%></h2>
+      <img src="<%=blog.image%>">
+      <span> <%=blog.created%></span>
+      <p><%= blog.body %></p>
+  <% }) %>
+</div>
 
 <% include partials/footer %>
