--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,7 +16,8 @@
       <textarea name="blog[body]"><%-blog.body%></textarea>
     </div>
     <div class="field">
-      <input type="submit" class="ui primary basic button">
+      <a class="ui gray basic button" href="/blogs/<%=blog._id%>">Cancel</a>
+      <input type="submit" class="ui green basic button">
     </div>
   </form>
 </div>
