--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,7 +13,7 @@
            us instead of just accepting it as a string -->
           <p><%-blog.body%></p>
         </div>
-        <a class="ui orange basic button" href="/blogs/<%=blog._id%>/edit">Edit</a>
+        <a class="ui gray basic button" href="/blogs/<%=blog._id%>/edit">Edit</a>
         <form id="delete" method="POST" action="/blogs/<%=blog._id%>?_method=DELETE">
           <button class="ui red basic button">Delete</button>
         </form>
