--- a/views/new.ejs
+++ b/views/new.ejs
@@ -16,7 +16,8 @@
       <textarea name="blog[body]"></textarea>
     </div>
     <div class="field">
-      <input type="submit" class="ui primary basic button">
+      <a class="ui gray basic button" href="/blogs">Cancel</a>
+      <input type="submit" class="ui green basic button">
     </div>
   </form>
 </div>
